--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
     <div class="toast" id="toast"></div>
 
     <script>
+        const BASE_URL = "https://java-backend-production-d7c2.up.railway.app";
+
         function showToast(message, success = true) {
             const toast = document.getElementById("toast");
             toast.innerText = message;
@@ -187,7 +189,7 @@
                 return;
             }
 
-            fetch("http://localhost:8080/register", {
+            fetch(`${BASE_URL}/api/students`, {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json"
