Define BASE_URL and update API endpoints for admin dashboard and login functionality

--- a/admin.html
+++ b/admin.html
@@ -263,6 +263,8 @@
     <div class="toast" id="toast"></div>
 
     <script>
+        const BASE_URL = "https://java-backend-production-d7c2.up.railway.app";
+
         let token = localStorage.getItem("token");
         if (!token) location = "login.html";
 
@@ -279,7 +281,7 @@
 
         async function loadStudents() {
             try {
-                const res = await fetch("http://localhost:8080/api/students");
+                const res = await fetch(`${BASE_URL}/api/students`);
 
                 if (!res.ok) {
                     throw new Error("Server error " + res.status);
@@ -332,7 +334,7 @@
             const name = document.getElementById("name").value;
             const email = document.getElementById("email").value;
 
-            fetch("http://localhost:8080/register", {
+            fetch(`${BASE_URL}/api/students`, {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
@@ -348,8 +350,11 @@
             if (!confirm("Delete this student?")) return;
 
             try {
-                const res = await fetch(`http://localhost:8080/api/delete/${id}`, {
-                    method: "DELETE"
+                const res = await fetch(`${BASE_URL}/api/delete/${id}`, {
+                    method: "DELETE",
+                    headers: {
+                        "Authorization": "Bearer " + token
+                    }
                 });
 
                 if (res.ok) {
@@ -373,7 +378,7 @@
             if (!name || !email) return;
 
             try {
-                const res = await fetch(`http://localhost:8080/api/update/${id}`, {
+                const res = await fetch(`${BASE_URL}/api/update/${id}`, {
                     method: "PUT",
                     headers: {
                         "Content-Type": "application/json"
@@ -405,7 +410,7 @@
             const name = document.getElementById("editName").value;
             const email = document.getElementById("editEmail").value;
 
-            fetch("http://localhost:8080/update/" + currentEditId, {
+            fetch(`${BASE_URL}/api/students` + currentEditId, {
                 method: "PUT",
                 headers: {
                     "Content-Type": "application/json",
@@ -434,7 +439,7 @@
         function downloadExcel() {
             const token = localStorage.getItem("token");
 
-            fetch("http://localhost:8080/admin/export", {
+            fetch(`${BASE_URL}/api/students`, {
                 headers: {
                     "Authorization": "Bearer " + token
                 }
