--- a/index.html
+++ b/index.html
@@ -169,48 +169,48 @@
     <div class="toast" id="toast"></div>
 
     <script>
-        const BASE_URL = "https://java-backend-production-d7c2.up.railway.app";
+    const BASE_URL = "https://java-backend-production-d7c2.up.railway.app";
 
-        function showToast(message, success = true) {
-            const toast = document.getElementById("toast");
-            toast.innerText = message;
-            toast.style.background = success ? "#22c55e" : "#ef4444";
-            toast.style.display = "block";
-            setTimeout(() => toast.style.display = "none", 2000);
+    function showToast(message, success = true) {
+        const toast = document.getElementById("toast");
+        toast.innerText = message;
+        toast.style.background = success ? "#22c55e" : "#ef4444";
+        toast.style.display = "block";
+        setTimeout(() => toast.style.display = "none", 2000);
+    }
+
+    function register() {
+        const name = document.getElementById("name").value.trim();
+        const email = document.getElementById("email").value.trim();
+        const password = document.getElementById("password").value.trim();
+
+        if (!name || !email || !password) {
+            showToast("All fields required", false);
+            return;
         }
 
-        function register() {
-            const name = document.getElementById("name").value.trim();
-            const email = document.getElementById("email").value.trim();
-            const password = document.getElementById("password").value.trim();
-
-            if (!name || !email || !password) {
-                showToast("All fields required", false);
-                return;
-            }
-
-            fetch(`${BASE_URL}/api/students`, {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({ name, email, password })
-            })
-                .then(res => {
-                    if (!res.ok) throw new Error();
-                    return res.json();
-                })
-                .then(() => {
-                    showToast("Registration successful ✅");
-                    document.getElementById("name").value = "";
-                    document.getElementById("email").value = "";
-                    document.getElementById("password").value = "";
-                })
-                .catch(() => {
-                    showToast("Registration failed ❌", false);
-                });
-        }
-    </script>
+        fetch(`${BASE_URL}/api/register`, {   // ✅ FIXED ENDPOINT
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({ name, email }) // remove password if backend doesn't use it
+        })
+        .then(res => {
+            if (!res.ok) throw new Error();
+            return res.json();
+        })
+        .then(() => {
+            showToast("Registration successful ✅");
+            document.getElementById("name").value = "";
+            document.getElementById("email").value = "";
+            document.getElementById("password").value = "";
+        })
+        .catch(() => {
+            showToast("Registration failed ❌", false);
+        });
+    }
+</script>
 
 </body>
 
