--- a/login.html
+++ b/login.html
@@ -119,7 +119,7 @@
         }
 
         try {
-            const res = await fetch(`${BASE_URL}/api/login`, {
+            const res = await fetch(`${BASE_URL}/login`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ email, password })
