--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             width: 100%;
             padding: 12px;
             border-radius: 8px;
-            border: none;
+            border: 1px solid rgba(255,255,255,0.1);
             background: rgba(255, 255, 255, 0.1);
             color: white;
         }
@@ -118,31 +118,25 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background: #22c55e;
             padding: 12px 20px;
             border-radius: 8px;
             display: none;
+            font-weight: 500;
+            z-index: 999;
         }
 
         /* RESPONSIVE */
         @media(max-width:500px) {
-            .navbar {
-                padding: 15px;
-            }
-
-            .card {
-                padding: 25px;
-            }
+            .navbar { padding: 15px; }
+            .card { padding: 25px; }
         }
     </style>
 </head>
 
-
-
 <body>
 
     <div class="navbar">
-        <div class="logo">Student Manager</div>
+        <div class="logo">🎓 Student Manager</div>
         <a href="login.html" class="admin-btn">Admin Login</a>
     </div>
 
@@ -155,7 +149,7 @@
             </div>
 
             <div class="input-group">
-                <input id="email" placeholder="Email">
+                <input id="email" type="email" placeholder="Email">
             </div>
 
             <div class="input-group">
@@ -169,49 +163,56 @@
     <div class="toast" id="toast"></div>
 
     <script>
-    const BASE_URL = "https://java-backend-production-d7c2.up.railway.app";
+        // ✅ Change this to your deployed backend URL
+        const BASE_URL = "https://java-backend-production-d7c2.up.railway.app";
 
-    function showToast(message, success = true) {
-        const toast = document.getElementById("toast");
-        toast.innerText = message;
-        toast.style.background = success ? "#22c55e" : "#ef4444";
-        toast.style.display = "block";
-        setTimeout(() => toast.style.display = "none", 2000);
-    }
-
-    function register() {
-        const name = document.getElementById("name").value.trim();
-        const email = document.getElementById("email").value.trim();
-        const password = document.getElementById("password").value.trim();
-
-        if (!name || !email || !password) {
-            showToast("All fields required", false);
-            return;
+        function showToast(message, success = true) {
+            const toast = document.getElementById("toast");
+            toast.innerText = message;
+            toast.style.background = success ? "#22c55e" : "#ef4444";
+            toast.style.display = "block";
+            setTimeout(() => toast.style.display = "none", 3000);
         }
 
-        fetch(`${BASE_URL}/api/register`, {   // ✅ FIXED ENDPOINT
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({ name, email }) // remove password if backend doesn't use it
-        })
-        .then(res => {
-            if (!res.ok) throw new Error();
-            return res.json();
-        })
-        .then(() => {
-            showToast("Registration successful ✅");
-            document.getElementById("name").value = "";
-            document.getElementById("email").value = "";
-            document.getElementById("password").value = "";
-        })
-        .catch(() => {
-            showToast("Registration failed ❌", false);
-        });
-    }
-</script>
+        async function register() {
+            const name = document.getElementById("name").value.trim();
+            const email = document.getElementById("email").value.trim();
+            const password = document.getElementById("password").value.trim();
+
+            if (!name || !email || !password) {
+                showToast("All fields are required ❌", false);
+                return;
+            }
+
+            try {
+                const res = await fetch(`${BASE_URL}/api/register`, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ name, email, password })
+                });
+
+                const data = await res.text();
+
+                if (res.status === 409) {
+                    showToast("Email already registered ❌", false);
+                    return;
+                }
+
+                if (!res.ok) {
+                    showToast("Registration failed ❌", false);
+                    return;
+                }
+
+                showToast("Registration successful ✅");
+                document.getElementById("name").value = "";
+                document.getElementById("email").value = "";
+                document.getElementById("password").value = "";
+
+            } catch (err) {
+                showToast("Cannot connect to server ❌", false);
+            }
+        }
+    </script>
 
 </body>
-
 </html>
