--- a/login.html
+++ b/login.html
@@ -34,6 +34,7 @@
         h2 {
             text-align: center;
             margin-bottom: 25px;
+            color: #1e293b;
         }
 
         .input-box {
@@ -46,6 +47,12 @@
             padding: 12px;
             border-radius: 8px;
             border: 1px solid #ddd;
+            font-size: 14px;
+            outline: none;
+        }
+
+        input:focus {
+            border-color: #4f46e5;
         }
 
         .toggle {
@@ -54,8 +61,9 @@
             top: 50%;
             transform: translateY(-50%);
             cursor: pointer;
-            font-size: 14px;
+            font-size: 16px;
             color: #555;
+            user-select: none;
         }
 
         button {
@@ -67,6 +75,8 @@
             color: white;
             font-weight: 600;
             cursor: pointer;
+            font-size: 15px;
+            transition: 0.3s;
         }
 
         button:hover {
@@ -74,22 +84,34 @@
         }
 
         .error {
-            margin-top: 10px;
+            margin-top: 12px;
             text-align: center;
             color: red;
+            font-size: 14px;
+        }
+
+        .back-link {
+            display: block;
+            text-align: center;
+            margin-top: 14px;
+            color: #6366f1;
+            text-decoration: none;
+            font-size: 14px;
+        }
+
+        .back-link:hover {
+            text-decoration: underline;
         }
     </style>
-    
 </head>
-
 
 <body>
 
     <div class="card">
-        <h2>Admin Login</h2>
+        <h2>🔐 Admin Login</h2>
 
         <div class="input-box">
-            <input id="email" placeholder="Admin Email">
+            <input id="email" type="email" placeholder="Admin Email">
         </div>
 
         <div class="input-box">
@@ -99,54 +121,66 @@
 
         <button onclick="login()">Login</button>
         <p id="msg" class="error"></p>
+        <a href="index.html" class="back-link">← Back to Registration</a>
     </div>
 
     <script>
-    const BASE_URL = "https://java-backend-production-d7c2.up.railway.app";
+        // ✅ Change this to your deployed backend URL
+        const BASE_URL = "https://java-backend-production-d7c2.up.railway.app";
 
-    function togglePass() {
-        const pass = document.getElementById("password");
-        pass.type = pass.type === "password" ? "text" : "password";
-    }
-
-    async function login() {
-        const email = document.getElementById("email").value.trim();
-        const password = document.getElementById("password").value.trim();
-
-        if (!email || !password) {
-            document.getElementById("msg").innerText = "All fields required";
-            return;
+        function togglePass() {
+            const pass = document.getElementById("password");
+            pass.type = pass.type === "password" ? "text" : "password";
         }
 
-        try {
-            const res = await fetch(`${BASE_URL}/login`, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ email, password })
-            });
+        async function login() {
+            const email = document.getElementById("email").value.trim();
+            const password = document.getElementById("password").value.trim();
+            const msg = document.getElementById("msg");
 
-            if (!res.ok) {
-                throw new Error("Invalid login");
+            if (!email || !password) {
+                msg.innerText = "All fields required";
+                return;
             }
 
-            const token = await res.text();
+            msg.innerText = "Logging in...";
 
-            localStorage.setItem("token", token);
+            try {
+                const res = await fetch(`${BASE_URL}/login`, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ email, password })
+                });
 
-            const payload = JSON.parse(atob(token.split('.')[1]));
+                if (!res.ok) {
+                    msg.innerText = "Invalid email or password";
+                    return;
+                }
 
-            if (payload.role === "ADMIN") {
-                window.location = "admin.html";
-            } else {
-                document.getElementById("msg").innerText = "Not authorized";
+                // ✅ Backend returns raw JWT token string
+                const token = await res.text();
+                localStorage.setItem("token", token);
+
+                // ✅ Decode JWT payload to get role
+                const payload = JSON.parse(atob(token.split('.')[1]));
+
+                if (payload.role === "ADMIN") {
+                    window.location.href = "admin.html";
+                } else {
+                    msg.innerText = "Access denied. Admin only.";
+                    localStorage.removeItem("token");
+                }
+
+            } catch (err) {
+                msg.innerText = "Cannot connect to server";
             }
-
-        } catch (err) {
-            document.getElementById("msg").innerText = "Invalid login";
         }
-    }
-</script>
+
+        // Allow pressing Enter to login
+        document.addEventListener("keydown", (e) => {
+            if (e.key === "Enter") login();
+        });
+    </script>
 
 </body>
-
 </html>
