--- a/login.html
+++ b/login.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
-
     <style>
         * {
             margin: 0;
@@ -28,7 +27,7 @@
             width: 100%;
             max-width: 380px;
             border-radius: 14px;
-            box-shadow: 0 25px 60px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 25px 60px rgba(0, 0, 0, .3);
         }
 
         h2 {
@@ -76,7 +75,7 @@
             font-weight: 600;
             cursor: pointer;
             font-size: 15px;
-            transition: 0.3s;
+            transition: .3s;
         }
 
         button:hover {
@@ -88,6 +87,7 @@
             text-align: center;
             color: red;
             font-size: 14px;
+            min-height: 20px;
         }
 
         .back-link {
@@ -106,31 +106,25 @@
 </head>
 
 <body>
-
     <div class="card">
         <h2>🔐 Admin Login</h2>
-
         <div class="input-box">
             <input id="email" type="email" placeholder="Admin Email">
         </div>
-
         <div class="input-box">
             <input id="password" type="password" placeholder="Password">
             <span class="toggle" onclick="togglePass()">👁</span>
         </div>
-
         <button onclick="login()">Login</button>
         <p id="msg" class="error"></p>
         <a href="index.html" class="back-link">← Back to Registration</a>
     </div>
 
     <script>
-        // ✅ Change this to your deployed backend URL
-        const BASE_URL = "https://java-backend-production-d7c2.up.railway.app";
-
+        const BASE_URL = "https://java-backend-production-0cb2.up.railway.app";
         function togglePass() {
-            const pass = document.getElementById("password");
-            pass.type = pass.type === "password" ? "text" : "password";
+            const p = document.getElementById("password");
+            p.type = p.type === "password" ? "text" : "password";
         }
 
         async function login() {
@@ -138,11 +132,7 @@
             const password = document.getElementById("password").value.trim();
             const msg = document.getElementById("msg");
 
-            if (!email || !password) {
-                msg.innerText = "All fields required";
-                return;
-            }
-
+            if (!email || !password) { msg.innerText = "All fields required"; return; }
             msg.innerText = "Logging in...";
 
             try {
@@ -152,35 +142,21 @@
                     body: JSON.stringify({ email, password })
                 });
 
-                if (!res.ok) {
-                    msg.innerText = "Invalid email or password";
-                    return;
-                }
+                if (!res.ok) { msg.innerText = "Invalid email or password"; return; }
 
-                // ✅ Backend returns raw JWT token string
-                const token = await res.text();
-                localStorage.setItem("token", token);
+                // ✅ Backend now returns JSON: { token, role, email }
+                const data = await res.json();
 
-                // ✅ Decode JWT payload to get role
-                const payload = JSON.parse(atob(token.split('.')[1]));
+                if (data.role !== "ADMIN") { msg.innerText = "Access denied. Admin only."; return; }
 
-                if (payload.role === "ADMIN") {
-                    window.location.href = "admin.html";
-                } else {
-                    msg.innerText = "Access denied. Admin only.";
-                    localStorage.removeItem("token");
-                }
+                localStorage.setItem("token", data.token);
+                window.location.href = "admin.html";
 
-            } catch (err) {
-                msg.innerText = "Cannot connect to server";
-            }
+            } catch { msg.innerText = "Cannot connect to server"; }
         }
 
-        // Allow pressing Enter to login
-        document.addEventListener("keydown", (e) => {
-            if (e.key === "Enter") login();
-        });
+        document.addEventListener("keydown", e => { if (e.key === "Enter") login(); });
     </script>
-
 </body>
+
 </html>
